API: Add Swagger annotations #2132
